--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,43 +1,334 @@
-@charset 'utf-8';
+@import "settings.color";
+@import "settings.font";
 
-@import 'settings';
-@import 'foundation';
-@import 'motion-ui';
 
-@include foundation-global-styles;
-@include foundation-grid;
-@include foundation-typography;
-@include foundation-button;
-@include foundation-forms;
-@include foundation-visibility-classes;
-@include foundation-float-classes;
-@include foundation-accordion;
-@include foundation-badge;
-@include foundation-breadcrumbs;
-@include foundation-button-group;
-@include foundation-callout;
-@include foundation-close-button;
-@include foundation-drilldown-menu;
-@include foundation-dropdown;
-@include foundation-dropdown-menu;
-@include foundation-flex-video;
-@include foundation-label;
-@include foundation-media-object;
-@include foundation-menu;
-@include foundation-off-canvas;
-@include foundation-orbit;
-@include foundation-pagination;
-@include foundation-progress-bar;
-@include foundation-slider;
-@include foundation-sticky;
-@include foundation-reveal;
-@include foundation-switch;
-@include foundation-table;
-@include foundation-tabs;
-@include foundation-thumbnail;
-@include foundation-title-bar;
-@include foundation-tooltip;
-@include foundation-top-bar;
+body {
+  color: $secondary-color;
+  text-align: center;
+  font-family: Conv_manteka, Helvetica, sans-serif;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
 
-@include motion-ui-transitions;
-@include motion-ui-animations;
+#pagepiling {
+
+  .section {
+    background: $main-color;
+  }
+
+  .title {
+    font-size: 3rem;
+  }
+
+  .section:nth-of-type(1) {
+
+    background: url(../img/bg.jpg) no-repeat center;
+    background-size: cover;
+    color: $secondary-color-darK;
+
+    .avatar {
+      width: 10rem;
+      height: 10rem;
+      border-radius: 50%;
+      box-shadow:
+             0 2px 4px rgba(0, 0, 0, 0.3),
+             0 4px 6px rgba(0, 0, 0, 0.2);
+      transform: scale(0.5);
+      opacity: 0;
+      transition: all 1s ease-in-out;
+
+      &.is-showing {
+        transform: scale(1);
+        opacity: 1;
+      }
+
+    }
+
+    .title {
+      font-size: 4rem;
+    }
+
+    hr {
+      width: 50%;
+    }
+
+    .subtitle {
+      font-size: 1.5rem;
+      opacity: 0;
+      transform: scale(0.8);
+      transition: all 1s ease-in-out;
+
+      &.is-showing {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+
+  }
+
+  .section:nth-of-type(2) {
+
+    background: url(../img/nju-bg.png) no-repeat center, $main-color;
+    background-size: cover;
+
+
+    #nju-logo {
+      width: 5rem;
+      transform: scale(0.6);
+      opacity: 0;
+      transition: all 0.6s ease-in-out 0.3s;
+
+      &.is-showing {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
+    p, h2 {
+      transform: translate(-100%, 0);
+      opacity: 0;
+      transition: all 0.8s ease-in-out 0.3s;
+
+      &.is-showing {
+        transform: translate(0, 0);
+        opacity: 1;
+      }
+    }
+
+    em {
+      color: white;
+    }
+
+  }
+
+  .section:nth-of-type(3) {
+
+
+    .content {
+      width: 60%;
+      max-width: 960px;
+      margin: 0 auto;
+    }
+
+    h4 {
+      color: white;
+      text-align: left;
+    }
+
+    .progress-wrap {
+      height: 20px;
+      position: relative;
+      background: #555;
+      border-radius: 25px;
+      padding: 10px;
+      box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+    }
+
+    .progress-bar {
+      height: 100%;
+      width: 0;
+      border-radius: 20px 8px 8px 20px;
+      background-color: rgb(43,194,83);
+      box-shadow:
+              inset 0 2px 9px  rgba(255,255,255,0.3),
+              inset 0 -2px 6px rgba(0,0,0,0.4);
+      position: relative;
+      overflow: hidden;
+    }
+
+  }
+
+  .section:nth-of-type(4) {
+
+    .grid {
+      width: 80%;
+      max-width: 960px;
+      padding: 0;
+      text-align: center;
+      margin: 0 auto;
+
+      li {
+        display: inline-block;
+        width: 250px;
+        padding: 10px;
+        text-align: left;
+        position: relative;
+
+        figure {
+          margin: 0;
+          position: relative;
+          overflow: hidden;
+
+          &:hover {
+
+            img {
+              transform: scale(0.5);
+            }
+
+            figcaption {
+              transform: scale(1);
+              opacity: 1;
+            }
+
+          }
+
+          img {
+            max-width: 100%;
+            display: block;
+            position: relative;
+            transition: transform 0.3s ease-in-out;
+            z-index: 10;
+          }
+
+          figcaption {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            padding: 10px;
+            background: #2c3f52;
+            color: #ed4e6e;
+            box-sizing: border-box;
+
+            transform: scale(1);
+            opacity: 0;
+            transition: all 0.3s ease-in-out;
+
+            h3 {
+              margin: 0;
+              padding: 0;
+              color: #fff;
+              font-size: 0.9rem;
+              text-shadow: none;
+            }
+
+            a {
+              text-align: center;
+              text-decoration: none;
+              padding: 5px 10px;
+              border-radius: 2px;
+              font-size: 0.6rem;
+              display: block;
+              background: #ed4e6e;
+              color: #fff;
+              position: absolute;
+              right: 10px;
+              bottom: 10px;
+              box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
+            }
+          }
+
+        }
+
+      }
+    }
+
+
+
+  }
+
+  .section:nth-of-type(5) {
+
+
+    .info-holder {
+      width: 60%;
+      height: 50%;
+      margin: 4rem auto 0;
+      padding: 1rem;
+      border: 3px dashed rgba(0, 0, 0, 0.3);
+
+
+      .address-info {
+
+        i {
+          width: 5rem;
+          height: 5rem;
+          border-radius: 50%;
+          background: $secondary-color;
+          color: white;
+          font-size: 2rem;
+          line-height: 5rem;
+          transform: translate(0, -70%);
+        }
+
+        p {
+          color: white;
+          font-size: 1.5rem;
+          transform: translate(0, -3rem);
+          opacity: 0;
+          transition: all 0.8s ease-in-out;
+
+          &.is-showing {
+            transform: translate(0, -2rem);
+            opacity: 1;
+          }
+
+        }
+
+      }
+
+
+      .contact-info {
+
+        ul {
+          margin: 0 auto;
+          display: block;
+          overflow: hidden;
+          padding: 0;
+
+          li {
+
+            display: inline-block;
+            opacity: 0;
+            transition: all 0.8s ease-in-out;
+
+            &:not(:last-child) {
+              margin-right:1rem;
+            }
+
+            &:nth-of-type(1) {
+              transform: translate(-100%, 50%);
+            }
+
+            &:nth-of-type(2) {
+              transform: translate(0, 100%);
+            }
+
+            &:nth-of-type(3) {
+              transform: translate(100%, 50%);
+            }
+
+            &.is-showing {
+              transform: translate(0, 0);
+              opacity: 1;
+            }
+
+            a {
+              display: block;
+              width: 3rem;
+              height: 3rem;
+              border-radius: 50%;
+              background-color: $secondary-color;
+              color: white;
+              text-decoration: none;
+              font-size: 1.5rem;
+              line-height: 3rem;
+              transition: all 0.5s ease-in-out;
+
+              &:hover {
+                border-radius: 5px;
+                background: $secondary-color-darK;
+              }
+
+            }
+          }
+
+        }
+
+      }
+
+
+    }
+  }
+
+}
